<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edcf2e">

    <ImageView
        android:id="@+id/Circle_sp"
        android:layout_width="299dp"
        android:layout_height="309dp"
        android:src="@drawable/circle"
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/firstTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="185dp"
        android:fontFamily="@font/trade_winds"
        android:text="Simple"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/secondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="235dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/banking"
        android:textColor="#ffffff"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/thirdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="265dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/dash"
        android:textColor="#ffffff"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/app"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/fifthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Circle_sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/thesparkfoundation"
        android:textColor="#403150"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/la_belle_aurore"
        android:text="@string/credit"
        android:textColor="#ffffff"
        android:textSize="25sp" />
</RelativeLayout>