<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:padding="5dp"
        android:background="#fbe5b8">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/circleshp"
            app:srcCompat="@drawable/user"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/username"
                android:textColor="#C4000000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/la_belle_aurore"/>

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtUserName"
                android:layout_marginLeft="7dp"
                android:text="@string/phoneno"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/ic_action_name" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtUserName"
                android:layout_alignParentRight="true"
                android:paddingLeft="4dp"
                android:layout_marginLeft="7dp"
                android:text="@string/balance"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/rupee" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>